Add deploy key to script and create a deploy folder for now (add to .gitignore)

--- a/mhn/templates/ui/script.html
+++ b/mhn/templates/ui/script.html
@@ -31,8 +31,8 @@
         </div>
         <div class="row">
             <div class="small-12 small-centered columns">
-                <p><kbd>wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy.sh &&
-                    bash deploy.sh {{ settings.server_url }} {{ settings.deploy_key }} {{ arch }} && docker compose up -d</kbd>
+                <p><kbd>wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy_{{ settings.deploy_key }}.sh &&
+                    bash deploy_{{ settings.deploy_key }}.sh {{ settings.server_url }} {{ settings.deploy_key }} {{ arch }} && docker compose up -d</kbd>
                 </p>
             </div>
         </div>
