--- a/mhn/templates/ui/script.html
+++ b/mhn/templates/ui/script.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="small-12 small-centered columns">
                 <p><kbd>wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy_{{ settings.deploy_key }}.sh &&
-                    bash deploy_{{ settings.deploy_key }}.sh {{ settings.server_url }} {{ settings.deploy_key }} {{ arch }} && docker compose up -d</kbd>
+                    bash deploy_{{ settings.deploy_key }}.sh -u "{{ settings.server_url }}" -d "{{ settings.deploy_key }}" -a "{{ arch }}" -k "{{ apikey.api_key }}" && docker compose up -d</kbd>
                 </p>
             </div>
         </div>
