--- a/mhn/templates/ui/script.html
+++ b/mhn/templates/ui/script.html
@@ -34,7 +34,7 @@
                 <p>
                     <kbd>
                         wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy_{{ settings.deploy_key }}.sh &&
-                        bash deploy_{{ settings.deploy_key }}.sh -u {{ settings.server_url }} -d "{{ settings.deploy_key }}" -a {{ arch }} -k {{ apikey.api_key }} && docker compose up -d
+                        bash deploy_{{ settings.deploy_key }}.sh -u {{ settings.server_url }} -d "{{ settings.deploy_key }}" -a "{{ arch }}" -k {{ apikey.api_key }} && docker compose up -d
                     </kbd>
                 </p>
             </div>
