--- a/mhn/templates/ui/script.html
+++ b/mhn/templates/ui/script.html
@@ -19,7 +19,16 @@
                     <option {% if arch == "-arm" %}selected{% endif %} value="1">ARM</option>
                 </select>
             </div>
-            <div class="small-4 columns"></div>
+            <div class="small-4 columns">
+                <h3>Instances</h3>
+                <input
+                    type="text" 
+                    name="instance_id" 
+                    value="{{ instance }}" 
+                    placeholder="Enter instance ID" 
+                    onchange="this.form.submit();" 
+                />
+            </div>
         </form>
     </div>
     {% if script %}
@@ -34,7 +43,7 @@
                 <p>
                     <kbd>
                         wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy_{{ settings.deploy_key }}.sh &&
-                        bash deploy_{{ settings.deploy_key }}.sh -d "{{ settings.deploy_key }}" -a "{{ arch }}" -k {{ apikey.api_key }} && docker compose up -d
+                        bash deploy_{{ settings.deploy_key }}.sh -d "{{ settings.deploy_key }}" -i "{{ instance }}" -a "{{ arch }}" -k {{ apikey.api_key }} && docker compose up -d
                     </kbd>
                 </p>
             </div>
