--- a/mhn/templates/ui/script.html
+++ b/mhn/templates/ui/script.html
@@ -13,11 +13,6 @@
                 </select>
             </div>
             <div class="small-4 columns">
-                <h3>Architecture</h3>
-                <select onchange="this.form.submit();" name="arch_id">
-                    <option value="0">Intel</option>
-                    <option {% if arch == "-arm" %}selected{% endif %} value="1">ARM</option>
-                </select>
             </div>
             <div class="small-4 columns">
                 <h3>Instances</h3>
@@ -43,7 +38,7 @@
                 <p>
                     <kbd>
                         wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy_{{ settings.deploy_key }}.sh &&
-                        bash deploy_{{ settings.deploy_key }}.sh -d "{{ settings.deploy_key }}" -i "{{ instance }}" -a "{{ arch }}" -k {{ apikey.api_key }} && docker compose up -d
+                        bash deploy_{{ settings.deploy_key }}.sh -d "{{ settings.deploy_key }}" -i "{{ instance }}" -k {{ apikey.api_key }} && docker compose up -d
                     </kbd>
                 </p>
             </div>
