--- a/mhn/templates/ui/script.html
+++ b/mhn/templates/ui/script.html
@@ -38,7 +38,7 @@
                 <p>
                     <kbd>
                         wget --no-check-certificate "{{ settings.server_url }}/api/script/?text=true&script_id={{ script.id }}" -O deploy_{{ settings.deploy_key }}.sh &&
-                        bash deploy_{{ settings.deploy_key }}.sh -d "{{ settings.deploy_key }}" -i "{{ instance }}" -k {{ apikey.api_key }} && docker compose up -d
+                        bash deploy_{{ settings.deploy_key }}.sh -d "{{ settings.deploy_key }}" {% if instance and instance != 'None' %}-i "{{ instance }}" {% endif %}-k {{ apikey.api_key }} && docker compose up -d
                     </kbd>
                 </p>
             </div>
